test_suite/tests/ui/enum-representation/internally-tagged-struct.stderr
error: #[serde(tag = "...")] can only be used on enums
 --> $DIR/internally-tagged-struct.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

